--- a/index.html
+++ b/index.html
@@ -17,27 +17,38 @@
 
     <div class="entries">
       <div class="row">
-        <div class="col-lg-12">        
-          <table class="table" id="infoTable">
+        <div class="col-lg-9">        
+          <table class="table table-bordered" id="infoTable">
             <thead>
               <tr>
-                  <th scope="col">Title</th>
-                  <th scope="col">Owner</th>
+                  <th scope="col">Application</th>
+                  <th scope="col">Process</th>
                   <th scope="col">Time</th>
               </tr>
             </thead>
             <tbody>
-
             </tbody>
           </table>
+
+          <div id="appname"></div>
+        </div>
+
+        <div class="col-lg-3">
+          <div class="container refreshButtonContainer" style="padding-bottom: 15px;">
+            <button id="refreshButton" class="refreshButton">Refresh Charts</button>
+          </div>
+          <h4 class="chartHeading">Application Time</h4>
+          <div class="container">
+            <canvas id="pieChart"></canvas>
+          </div>
         </div>
       </div>
     </div>
 
-    <div id="appname"></div>
-
     <script>
       require('./renderer.js')
     </script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
+
   </body>
 </html>
