Disabled chart animation, added scrollbar to entries

--- a/index.html
+++ b/index.html
@@ -15,21 +15,22 @@
       <h1>Tidal Time Tracker</h1>  
     </div>    
 
-    <div class="entries">
+    <div>
       <div class="row">
-        <div class="col-lg-9">        
-          <table class="table table-bordered" id="infoTable">
-            <thead>
-              <tr>
-                  <th scope="col">Application</th>
-                  <th scope="col">Process</th>
-                  <th scope="col">Time</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-
+        <div class="col-lg-9">
+          <div class="entries">
+            <table class="table table-bordered" id="infoTable">
+              <thead>
+                <tr>
+                    <th scope="col">Application</th>
+                    <th scope="col">Process</th>
+                    <th scope="col">Time</th>
+                </tr>
+              </thead>
+              <tbody>
+              </tbody>
+            </table>
+          </div>
           <div id="appname"></div>
         </div>
 
