--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
             <table class="table table-bordered" id="infoTable">
               <thead>
                 <tr>
-                    <th scope="col">Application</th>
-                    <th scope="col">Process</th>
-                    <th scope="col">Time</th>
+                    <th scope="col" onclick="sortTable(0)">Application</th>
+                    <th scope="col" onclick="sortTable(1)">Process</th>
+                    <th scope="col" onclick="sortTable(2)">Time</th>
                 </tr>
               </thead>
               <tbody>
@@ -35,8 +35,13 @@
         </div>
 
         <div class="col-lg-3">
-          <div class="container refreshButtonContainer" style="padding-bottom: 15px;">
-            <button id="refreshButton" class="refreshButton">Refresh Charts</button>
+          <div class="row">
+            <div class="container col-lg-6 refreshButtonContainer" style="padding-bottom: 15px;">
+              <button id="pauseButton" class="controlButtons">Pause</button>
+            </div>
+            <div class="container col-lg-6">
+              <button id="refreshButton" class="controlButtons">Refresh Charts</button>
+            </div>
           </div>
           <h4 class="chartHeading">Application Time</h4>
           <div class="container">
@@ -49,6 +54,7 @@
     <script>
       require('./renderer.js')
     </script>
+    <script type="text/javascript" src="./tablesorter.js"></script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
 
   </body>
