Added timer, fixed CSS flashing

--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
         </div>
 
         <div class="col-lg-3">
+          <div id="timerClock" class="timer"></div>
           <div class="row">
             <div class="container col-lg-6 refreshButtonContainer" style="padding-bottom: 15px;">
               <button id="pauseButton" class="controlButtons">Pause</button>
