Added delete all entries button (and confirmation)

--- a/index.html
+++ b/index.html
@@ -45,6 +45,11 @@
               <button id="refreshButton" class="controlButtons">Refresh Charts</button>
             </div>
           </div>
+          <div class="row">
+            <div class="container col-lg-12" style="padding-bottom: 15px;">
+              <button id="deleteEntriesButton" class="controlButtons">Delete All Entries</button>
+            </div>
+          </div>
           <h4 class="chartHeading">Application Time</h4>
           <div class="container">
             <canvas id="pieChart"></canvas>
