Added more charts (with config)

--- a/index.html
+++ b/index.html
@@ -50,10 +50,15 @@
               <button id="deleteEntriesButton" class="controlButtons">Delete All Entries</button>
             </div>
           </div>
-          <h4 class="chartHeading">Application Time</h4>
-          <div class="container">
-            <canvas id="pieChart"></canvas>
+          <div>
+            <h4 class="chartHeading">Application Time</h4>
+            <div class="container charts">
+              <canvas id="chartOne"></canvas>
+            </div>
           </div>
+          <div class="container charts">
+              <canvas id="chartTwo"></canvas>
+            </div>
         </div>
       </div>
     </div>
