Added Stats page (WIP)

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
+    <link href="css/dark.css" rel="stylesheet">
 
   </head>
   <body>
@@ -38,7 +39,7 @@
         <div class="col-lg-3">
           <div id="timerClock" class="timer"></div>
           <div class="row">
-            <div class="container col-lg-6 refreshButtonContainer" style="padding-bottom: 15px;">
+            <div class="container col-lg-6 refreshButtonContainer">
               <button id="pauseButton" class="controlButtons">Pause</button>
             </div>
             <div class="container col-lg-6">
@@ -46,8 +47,11 @@
             </div>
           </div>
           <div class="row">
-            <div class="container col-lg-12" style="padding-bottom: 15px;">
+            <div class="container col-lg-6">
               <button id="deleteEntriesButton" class="controlButtons">Delete All Entries</button>
+            </div>
+            <div class="container col-lg-6">
+              <button id="statsButton" class="controlButtons">Statistics</button>
             </div>
           </div>
           <div>
