--- a/stats.html
+++ b/stats.html
@@ -25,7 +25,7 @@
       </div>
       <div class="container statsContainer">
         <div class="row">
-          <div class="container col-lg-6">
+          <div class="container statsContainerItem col-lg-5">
             <div class="container">
               <h4>Average Application Time</h4>
             </div>
@@ -33,7 +33,8 @@
               <p id="averageTime"></p>
             </div>
           </div>
-          <div class="container col-lg-6">
+          <div class="container col-lg-2"></div>
+          <div class="container statsContainerItem col-lg-5">
             <div class="container">
               <h4>Most Used Application</h4>
             </div>
