Added another stat, least used app

--- a/stats.html
+++ b/stats.html
@@ -43,6 +43,16 @@
             </div>
           </div>
         </div>
+        <div class="row">
+          <div class="container statsContainerItem col-lg-5">
+            <div class="container">
+              <h4>Least Used Application</h4>
+            </div>
+            <div class="container itemStat">
+              <p id="leastUsedApp"></p>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
 
