About uses app version, about/stats use custom style

--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
-    
+
   </head>
   <body>
     <div class="container heading">
@@ -21,7 +21,7 @@
       <div class="row">
         <div class="col-sm-12">
           <p style="text-align: center;">
-            v0.0.1
+            v<span id=versionApp></span>
             <br>
             MiningMark48
             <br><br>
