--- a/src/signin.html
+++ b/src/signin.html
@@ -24,6 +24,7 @@
             <div class="form-group">
               <input type="text" placeholder="Email: " class="form-control signin-form" id="email">
               <input type="password" placeholder="Password: " class="form-control signin-form" id="password">
+              <input type="checkbox" class="signin-form" checked="checked" id="remember">Remember Me</input>
               <div class="form-group signin-form">
                 <button class="btn btn-success" id="btnSignIn" style="width: 125px;">Sign In</button>
                 <button class="btn btn-info" id="btnResetPW" style="width: 200px;">Reset Password</button>
