--- a/src/signin.html
+++ b/src/signin.html
@@ -13,18 +13,20 @@
 
   </head>
   <body>
-    <div class="container heading">
-      <h1>Sign In</h1>
-    </div>
-
-    <div class="container">
+    <div class="container signin-container">
+      <div class="container heading">
+        <h1>Sign In</h1>
+      </div>
       <div class="row justify-content-center">
         <div class="col-sm-8">
           <div class="form-container" class="container">
             <div class="form-group">
               <input type="text" placeholder="Email: " class="form-control signin-form" id="email">
               <input type="password" placeholder="Password: " class="form-control signin-form" id="password">
-              <input type="checkbox" class="signin-form" checked="checked" id="remember">Remember Me</input>
+              <div class="form-group signin-form">
+                <input type="checkbox"checked="checked" id="remember">  Remember Me</input>
+                <input type="checkbox" class="signin-form-showpw" onclick="showPassword()">  Show Password</input>
+              </div>
               <div class="form-group signin-form">
                 <button class="btn btn-success" id="btnSignIn" style="width: 125px;">Sign In</button>
                 <button class="btn btn-info" id="btnResetPW" style="width: 200px;">Reset Password</button>
@@ -41,5 +43,15 @@
     <script>
       require('./signinrenderer.js')
     </script>
+    <script>
+      function showPassword() {
+        var x = document.getElementById("password");
+        if (x.type === "password") {
+          x.type = "text";
+        } else {
+          x.type = "password";
+        }
+      }
+  </script>
   </body>
 </html>
