--- a/src/stats.html
+++ b/src/stats.html
@@ -16,7 +16,7 @@
     <div class="container heading">
       <h1>Statistics</h1>
       <div class="container col-lg-3">
-        <button id="backButton" class="controlButtons">Back</button>
+        <button id="backButton" class="statsButtons">Back</button>
       </div>
     </div>
     <div>
@@ -70,10 +70,10 @@
           </div>
           <div class="container">
             <div class="container statsButtonContainer">
-              <button id="mostUsedButton" class="controlButtons">Most Used</button>
+              <button id="mostUsedButton" class="statsButtons">Most Used</button>
             </div>
             <div class="container statsButtonContainer">
-              <button id="leastUsedButton" class="controlButtons">Least Used</button>
+              <button id="leastUsedButton" class="statsButtons">Least Used</button>
             </div>
           </div>
         </div>
