--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,9 @@
     <link href="css/dark.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
 
+    <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
   </head>
   <body>
     <div class="container heading">
@@ -39,20 +42,25 @@
         <div class="col-lg-3">
           <div id="timerClock" class="timer"></div>
           <div class="row">
-            <div class="container col-lg-6 refreshButtonContainer">
-              <button id="pauseButton" class="controlButtons">Pause</button>
+            <div class="container col-lg-3 ctooltip ctooltip-bottom">
+              <button id="pauseButton" class="controlButtons"><i class="fas fa-pause"></i></button>
+              <span class="ctooltiptext ctooltiptext-bottom">Pause Tracking</span>
             </div>
-            <div class="container col-lg-6">
-              <button id="refreshButton" class="controlButtons">Refresh Charts</button>
+            <div class="container col-lg-3 ctooltip ctooltip-bottom">
+              <button id="refreshButton" class="controlButtons"><i class="fas fa-sync"></i></button>
+              <span class="ctooltiptext ctooltiptext-bottom">Refresh Charts</span>
+            </div>
+            <div class="container col-lg-3 ctooltip ctooltip-bottom">
+              <button id="deleteEntriesButton" class="controlButtons"><i class="fas fa-times"></i></button>
+              <span class="ctooltiptext ctooltiptext-bottom">Delete All<br>Entries</span>
+            </div>
+            <div class="container col-lg-3 ctooltip ctooltip-left">
+              <button id="statsButton" class="controlButtons"><i class="fas fa-chart-line"></i></button>
+              <span class="ctooltiptext ctooltiptext-left">Statistics</span>
             </div>
           </div>
           <div class="row">
-            <div class="container col-lg-6">
-              <button id="deleteEntriesButton" class="controlButtons">Delete All Entries</button>
-            </div>
-            <div class="container col-lg-6">
-              <button id="statsButton" class="controlButtons">Statistics</button>
-            </div>
+            
           </div>
           <div>
             <h4 class="chartHeading">Application Time</h4>
@@ -73,6 +81,5 @@
       require('./renderer.js')
     </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-
   </body>
 </html>
