Tweaks to the pause button

--- a/src/index.html
+++ b/src/index.html
@@ -44,7 +44,7 @@
           <div class="row">
             <div class="container col-lg-3 ctooltip ctooltip-bottom">
               <button id="pauseButton" class="controlButtons"><i class="fas fa-pause"></i></button>
-              <span class="ctooltiptext ctooltiptext-bottom">Pause Tracking</span>
+              <span id="pauseButtonTooltip" class="ctooltiptext ctooltiptext-bottom">Pause Tracking</span>
             </div>
             <div class="container col-lg-3 ctooltip ctooltip-bottom">
               <button id="refreshButton" class="controlButtons"><i class="fas fa-sync"></i></button>
