Styling changes to the signin menu

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
 
     <link href="css/main.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
+    <!-- Used for themes -->
     <link href="css/dark.css" rel="stylesheet">
 
     <!-- Custom fonts for this template -->
