Made paused tracking more obvious
Added a animated dashed border that displays around the table when tracking is paused

--- a/src/index.html
+++ b/src/index.html
@@ -24,7 +24,7 @@
     <div>
       <div class="row">
         <div class="col-lg-9">
-          <div class="entries">
+          <div class="entries" id="tableDiv">
             <table class="table table-bordered" id="infoTable">
               <thead>
                 <tr>
