--- a/src/stats.html
+++ b/src/stats.html
@@ -11,13 +11,20 @@
     <link href="css/dark.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
 
+    <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
   </head>
   <body>
+    <div>
+      <button id="backButton" class="backButton"><i class="fas fa-arrow-left"></i></button>
+    </div>
+    <!-- <button id="backButton" class="backButton"><i class="fas fa-arrow-left"></i></button> -->
     <div class="container heading">
       <h1>Statistics</h1>
-      <div class="container col-lg-3">
-        <button id="backButton" class="statsButtons">Back</button>
-      </div>
+      <!-- <div class="container col-lg-3">
+        <button id="backButton" class="statsButtons backButton">Back</button>
+      </div> -->
     </div>
     <div>
       <div class="row">
@@ -85,7 +92,11 @@
     <script>
       require('./statsrenderer.js')
     </script>
+    <script type="text/javascript">
+      $(document).ready(function(){
+        $('[data-toggle="tooltip"]').tooltip(); 
+      });
+    </script>
     <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
-
   </body>
 </html>
