Fixed the back button on stats to match the others

--- a/src/stats.html
+++ b/src/stats.html
@@ -17,7 +17,7 @@
   </head>
   <body>
     <div>
-      <button id="backButton" class="backButton" data-tippy-content="Back" data-tippy-placement="right"><i class="fas fa-arrow-left"></i></button>
+      <button id="backButton" class="controlButtons backButton" data-tippy-content="Back" data-tippy-placement="right"><i class="fas fa-arrow-left"></i></button>
     </div>
     <!-- <button id="backButton" class="backButton"><i class="fas fa-arrow-left"></i></button> -->
     <div class="container heading">
