--- a/src/index.html
+++ b/src/index.html
@@ -41,7 +41,7 @@
         </div>
 
         <div class="col-lg-3">
-          <div id="timerClock" class="timer"></div>
+          <div id="timerClock" class="timer">00:00:00</div>
           <div class="row">
             <div class="container col-lg-3">
               <button id="pauseButton" class="controlButtons" data-tippy-allowHTML=true data-tippy-content="<div id='pauseButtonTooltip'>Pause Tracking</div>"><i class="fas fa-pause"></i></button>
