Moved the border for being paused to outside div

--- a/src/index.html
+++ b/src/index.html
@@ -23,8 +23,8 @@
 
     <div>
       <div class="row">
-        <div class="col-lg-9">
-          <div class="entries" id="tableDiv">
+        <div class="col-lg-9 entriesCont" id="tableDiv">
+          <div class="entries">
             <table class="table table-bordered" id="infoTable">
               <thead>
                 <tr>
