Tweaks to stats page

--- a/src/stats.html
+++ b/src/stats.html
@@ -77,10 +77,10 @@
           </div>
           <div class="container">
             <div class="container statsButtonContainer">
-              <button id="mostUsedButton" class="statsButtons">Most Used</button>
+              <button id="mostUsedButton" class="statsButtons">Most Time Spent</button>
             </div>
             <div class="container statsButtonContainer">
-              <button id="leastUsedButton" class="statsButtons">Least Used</button>
+              <button id="leastUsedButton" class="statsButtons">Least Time Spent</button>
             </div>
           </div>
         </div>
