Tweaks to the current window style and info

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,10 @@
               </tbody>
             </table>
           </div>
-          <div id="appname"></div>
+          <div class="row" style="padding-left: 15px;">
+            <div>Current Window:</div>
+            <div style="padding-left: 5px; font-style: italic;" id="appname"></div>
+          </div>
         </div>
 
         <div class="col-lg-3">
