--- a/src/about.html
+++ b/src/about.html
@@ -11,6 +11,9 @@
     <link href="css/dark.css" rel="stylesheet">
     <link href="css/dark.css" rel="stylesheet">
 
+    <!-- Custom fonts for this template -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
+
   </head>
   <body>
     <div class="container heading">
@@ -27,6 +30,20 @@
             <br><br>
             Electron v<span id=versionElectron></span>
           </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="container col-sm-3">
+          <button id="pauseButton" class="controlButtons" onclick="window.open('https://github.com/MiningMark48')"><i class="fab fa-github"></i></button>
+        </div>
+        <div class="container col-sm-3">
+          <button id="refreshButton" class="controlButtons" onclick="window.open('https://miningmark48.github.io/discord/')"><i class="fab fa-discord"></i></button>
+        </div>
+        <div class="container col-sm-3">
+          <button id="deleteEntriesButton" class="controlButtons" onclick="window.open('https://miningmark48.github.io')"><i class="fas fa-globe-americas"></i></button>
+        </div>
+        <div class="container col-sm-3">
+          <button id="statsButton" class="controlButtons" onclick="window.open('https://paypal.me/miningmark48')"><i class="fas fa-donate"></i></button>
         </div>
       </div>
     </div>
